tempfile/derive_more/tests/compile_fail/try_from/invalid_repr.rs
#[derive(derive_more::TryFrom)]
#[repr(a + b)]
enum Enum {
    Variant
}

fn main() {}
